src/test/deca/syntax/valid/extension/MatAssign.deca
// Description:
//    Matrice mal assigné
//  Problème réglé avec la grammaire contextuelle

{
    int[][][] a = new int[3][3][3];
    a = 2;
}

