src/test/deca/syntax/invalid/extension/TabTailleMalPlacee.deca
// Description:
//    Tableau avec taille mal placée
//

{
    int[3] a = {1, 2, 3};
}
